package budget;

public class BudgetException extends Exception {
    public BudgetException(String message) {
        super(message);
    }
}

