@startuml

skinparam packageStyle rectangle

hide circle
skinparam classAttributeIconSize 0
hide members
skinparam class {
    BackgroundColor #white
    ArrowColor DarkGreen
    BorderColor DarkGreen
}
skinparam ArrowFontColor Black
skinparam ArrowThickness 0.8
skinparam classStyle rectangle

package "Budget System" {

    interface BudgetManager
    class BudgetList
    class Budget
    class BudgetAttributes
    class BudgetCommand
    class BudgetParser
    class BudgetException

    BudgetManager <|.. BudgetList
    BudgetList --> "1..*" Budget
    BudgetList --> BudgetException
    Budget --> BudgetException

    BudgetParser --> BudgetAttributes
    BudgetAttributes --> BudgetCommand
    BudgetCommand --> BudgetList
    BudgetCommand ..> BudgetException : <<catch>>

}


User --> BudgetParser : input

@enduml
